feat: add and refactor rspec, service & query object

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,7 @@ en:
       failed: 'Unable to import %{model}'
   activerecord:
     errors:
-      model:
+      models:
         user:
           attributes:
             avatar:
